fix tooltip text is not readable -> higher contrast

--- a/plugins/CoreHome/stylesheets/dataTable/_reportDocumentation.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_reportDocumentation.less
@@ -4,7 +4,7 @@ table.dataTable th .columnDocumentation {
   width: 165px;
   text-align: left;
   background: #f7f7f7;
-  color: #444;
+  color: #ddd;
   font-size: 11px;
   font-weight: normal;
   border: 1px solid #e4e5e4;
